--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             
             <div class="home-img">
-                <img src="img/images.png" alt="img" height="350px" width="350px" >
+                <img src="img/images.png" alt="img">
             </div>
 
 
